--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -3,7 +3,7 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: '&fM&7o&fs&7q&fu&7i&ft&7o &fG&7i&fr&7l'
+      prefix: '&dM&co&ds&cq&du&ci&dt&co &dG&ci&dr&cl'
       suffix: '&f'
     worlds:
       survival:
@@ -1683,34 +1683,6 @@ groups:
         - ch.alias.haste3
         - ch.alias.haste4
         - ch.alias.haste5
-  redranger:
-    inheritance:
-    - commonherotraits
-    options:
-      prefix: '&4R&ce&7d &4R&ca&7n&8g&4e&cr'
-      suffix: '&4'
-    worlds:
-      survival:
-        permissions:
-        - -essentials.protect.damage.fall
-        - ch.alias.carryplayer
-        - ch.alias.dismountplayer
-        - ch.alias.jump0
-        - ch.alias.jump1
-        - ch.alias.jump2
-        - ch.alias.jump3
-        - ch.alias.jump4
-        - ch.alias.run0
-        - ch.alias.run1
-        - ch.alias.run2
-        - ch.alias.haste0
-        - ch.alias.haste1
-        - ch.alias.haste2
-        - ch.alias.haste3
-        - ch.alias.haste4
-        - ch.alias.haste5
-        - ch.alias.zord
-        - ch.alias.unzord
   blackcanary:
     inheritance:
     - commonherotraits
