--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -10387,7 +10387,7 @@ users:
       name: lion002
   4087bc7f-c213-47df-bf2d-41650030be45:
     group:
-    - blackflash
+    - zoom
     options:
       name: adambash
     worlds:
@@ -13856,7 +13856,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - flashwallywest
+    - mortal
     options:
       name: nightghost2
     permissions:
