--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,32 @@
 groups:
+  redranger:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&4R&ce&7d &4R&ca&7n&8g&4e&cr'
+      suffix: '&4'
+    worlds:
+      survival:
+        permissions:
+        - -essentials.protect.damage.fall
+        - ch.alias.carryplayer
+        - ch.alias.dismountplayer
+        - ch.alias.jump0
+        - ch.alias.jump1
+        - ch.alias.jump2
+        - ch.alias.jump3
+        - ch.alias.jump4
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.haste0
+        - ch.alias.haste1
+        - ch.alias.haste2
+        - ch.alias.haste3
+        - ch.alias.haste4
+        - ch.alias.haste5
+        - ch.alias.zord
+        - ch.alias.unzord
   mosquitogirl:
     inheritance:
     - commonherotraits
@@ -10387,7 +10415,7 @@ users:
       name: lion002
   4087bc7f-c213-47df-bf2d-41650030be45:
     group:
-    - zoom
+    - redranger
     options:
       name: adambash
     worlds:
@@ -10461,7 +10489,7 @@ users:
       name: BluuMelon
   474707f7-f8b4-43ea-8978-9cae17917e82:
     group:
-    - quarantine
+    - goku
     options:
       name: MilesMorales888
     permissions: []
@@ -10629,7 +10657,7 @@ users:
       name: dAnIeLnS
   59c423bf-2a7e-4fe2-8ac2-7393de01d583:
     group:
-    - sonicthehedgehog
+    - martianmanhunter
     options:
       name: Boss90907
     permissions: []
@@ -10966,7 +10994,7 @@ users:
       name: TheDoctor1213
   7b02decc-d614-4041-9c25-1d3d96440d72:
     group:
-    - blacklanternmartianmanhunter
+    - mortal
     options:
       name: That_Panda_Guy
     permissions: []
@@ -11995,7 +12023,7 @@ users:
       name: FlameZelus
   e17d8de4-9fa8-474a-a6c1-54d28c9a5591:
     group:
-    - bluelanternbarryallen
+    - flashbarryallen
     options:
       name: nevsfam
   e1e34998-0cba-4fb1-9bdf-f2969fbd9b39:
@@ -12690,7 +12718,7 @@ users:
       name: Soggy_Wafer
   c8b88131-52d4-4af0-9593-ddcdb3d56058:
     group:
-    - redlanternsupergirl
+    - mosquitogirl
     options:
       name: _WonderBat_
     worlds:
@@ -13310,7 +13338,7 @@ users:
       name: GmenII2861
   a8f8ce5f-64ee-469d-9b3f-7d7069898694:
     group:
-    - blackbolt
+    - blueranger
     options:
       name: CorruptRacer
   8804c5af-7861-4d3b-ae26-750b4cf93f25:
@@ -13401,7 +13429,7 @@ users:
       name: alonzealonso
   b09b6618-e035-4e1f-be4e-f01ec6888001:
     group:
-    - beerus
+    - deadpool
     options:
       name: Bcrulez
     permissions: []
@@ -13820,7 +13848,7 @@ users:
       name: SimulatedCape
   42759fe9-4f32-43b9-bdbf-8f9dc8de8bc6:
     group:
-    - whitelanterntelosusr
+    - zoom
     options:
       name: Zoomplays
     permissions: []
@@ -13856,7 +13884,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - mortal
+    - flashwallywest
     options:
       name: nightghost2
     permissions:
@@ -14827,7 +14855,7 @@ users:
       name: Leedler268
   34a87619-4b40-4ae8-b759-3efa25bbbffd:
     group:
-    - blacklanternsuperman
+    - blacklanterneobardthawne
     options:
       name: Glint73
   844c481c-dd94-4524-83a3-3bbcc296bee5:
@@ -15160,7 +15188,7 @@ users:
       name: Macmac
   f56713b1-d391-4726-b814-0f3f2ec815c4:
     group:
-    - shazam
+    - redhood
     options:
       name: yoshiguide
   04a3a580-bf33-47f7-89ba-2a2621b56213:
@@ -15433,7 +15461,7 @@ users:
       name: _SuperGirl_
   dd02c537-5856-44e6-9ce9-0a72f1127ffc:
     group:
-    - mortal
+    - godspeed
     options:
       name: EnderBlaze360_
   4be630da-a5e8-4aa3-bd1c-32fe71565e4d:
@@ -15596,7 +15624,7 @@ users:
       name: MystiqueTheHero
   c35f88b9-137f-420e-ada9-74c93e9911ed:
     group:
-    - blacklanternsolomongrundy
+    - bluelanternbarryallen
     options:
       name: TheMVP56
   4361fda2-e3c5-46d9-bcc1-10f96804511f:
@@ -15676,7 +15704,7 @@ users:
       name: AnotherWon
   c6cb4b81-f1e7-446d-b966-e4ed7b45909d:
     group:
-    - onepunchman
+    - blacklanternmartianmanhunter
     options:
       name: LordOfGallifrey
     permissions: []
@@ -15692,7 +15720,7 @@ users:
       name: NoFearKing
   d39ddc52-5fdb-484e-8e0c-f538e7982bee:
     group:
-    - hawkgirl
+    - mosquitogirl
     options:
       name: Eyemakid
   b23253de-b89d-4ea4-8f9d-f8eaee9e2c37:
@@ -15899,7 +15927,7 @@ users:
       name: MuffinSage
   f8fb1e3a-4672-4620-9988-e99ca40c5e98:
     group:
-    - flashwallywest
+    - flashbartallen
     options:
       name: WizardPros
   a15c6cfa-4abf-4fe5-bb65-594205562ad2:
@@ -15952,6 +15980,11 @@ users:
     - ghostriderjohnnyblaze
     options:
       name: codyplayz123582
+  04c0eb6c-bfc8-4925-b12d-c7940a44f274:
+    group:
+    - superman
+    options:
+      name: CaptainColdCW
 worlds:
   checkers:
     inheritance:
