--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -5939,23 +5939,7 @@ groups:
       prefix: '§1T§1h§1e §1D§1o§1c§1t§1o§1r'
       suffix: '&c'
     inheritance:
-    - mortal
-    worlds:
-      '1_9':
-        permissions:
-        - ch.alias.thedoctor
-        - ch.alias.jump0
-        - ch.alias.jump1
-        - ch.alias.jump2
-        - ch.alias.run0
-        - ch.alias.run1
-        - ch.alias.run2
-        - ch.alias.run3
-        - ch.alias.run4
-        - ch.alias.haste0
-        - ch.alias.haste1
-        - ch.alias.haste2
-        - ch.alias.haste3
+    - commonherotraits
   apocalypse:
     options:
       prefix: '&3A&9p&3o&9ca&3lypse'
