--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -5934,7 +5934,7 @@ groups:
       '1_9':
         permissions:
         - ch.alias.joker
-  thedoctor:
+  thefourthdoctor:
     options:
       prefix: '§1T§1h§1e §1D§1o§1c§1t§1o§1r'
       suffix: '&c'
