--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -5936,7 +5936,7 @@ groups:
         - ch.alias.joker
   thefourthdoctor:
     options:
-      prefix: '§1T§1h§1e §1D§1o§1c§1t§1o§1r'
+      prefix: '&6The &7D&co&ec&7t&7&5o&6r&8(&f4th&8)'
       suffix: '&c'
     inheritance:
     - commonherotraits
