--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,10 @@
 groups:
+  thefourthdoctor:
+    options:
+      prefix: '&6The &7D&co&ec&7t&7&5o&6r&8(&f4th&8)'
+      suffix: '&c'
+    inheritance:
+    - commonherotraits
   redranger:
     inheritance:
     - commonherotraits
@@ -10415,7 +10421,7 @@ users:
       name: lion002
   4087bc7f-c213-47df-bf2d-41650030be45:
     group:
-    - redranger
+    - doctormanhattan
     options:
       name: adambash
     worlds:
@@ -10994,7 +11000,7 @@ users:
       name: TheDoctor1213
   7b02decc-d614-4041-9c25-1d3d96440d72:
     group:
-    - mortal
+    - darkseid
     options:
       name: That_Panda_Guy
     permissions: []
@@ -12718,7 +12724,7 @@ users:
       name: Soggy_Wafer
   c8b88131-52d4-4af0-9593-ddcdb3d56058:
     group:
-    - mosquitogirl
+    - redlanternsupergirl
     options:
       name: _WonderBat_
     worlds:
@@ -13338,7 +13344,7 @@ users:
       name: GmenII2861
   a8f8ce5f-64ee-469d-9b3f-7d7069898694:
     group:
-    - blueranger
+    - blackbolt
     options:
       name: CorruptRacer
   8804c5af-7861-4d3b-ae26-750b4cf93f25:
@@ -13429,7 +13435,7 @@ users:
       name: alonzealonso
   b09b6618-e035-4e1f-be4e-f01ec6888001:
     group:
-    - deadpool
+    - parallaxentity
     options:
       name: Bcrulez
     permissions: []
@@ -13848,7 +13854,7 @@ users:
       name: SimulatedCape
   42759fe9-4f32-43b9-bdbf-8f9dc8de8bc6:
     group:
-    - zoom
+    - greenlanternhaljordan
     options:
       name: Zoomplays
     permissions: []
