--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -10421,7 +10421,7 @@ users:
       name: lion002
   4087bc7f-c213-47df-bf2d-41650030be45:
     group:
-    - doctormanhattan
+    - mortal
     options:
       name: adambash
     worlds:
@@ -11000,7 +11000,7 @@ users:
       name: TheDoctor1213
   7b02decc-d614-4041-9c25-1d3d96440d72:
     group:
-    - darkseid
+    - apocalypse
     options:
       name: That_Panda_Guy
     permissions: []
@@ -11130,7 +11130,7 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - zion
+    - thefourthdoctor
     options:
       name: God_Doesnt_Exist
       prefix: ''
