--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1498,7 +1498,9 @@ groups:
         permissions:
         - ch.alias.yell
         - -essentials.protect.damage.fall
-        - ch.alias.transmute
+        - essentials.gamemode
+        - essentials.gamemode.creative
+        - essentials.gamemode.survival
         - ch.alias.blackbolt
         - essentials.msg
         - ch.alias.mindlock
