--- a/Multiverse-Core/worlds.yml
+++ b/Multiverse-Core/worlds.yml
@@ -3033,7 +3033,7 @@ worlds:
     pvp: 'true'
     scale: '1.0'
     respawnWorld: alpha
-    allowWeather: 'true'
+    allowWeather: 'false'
     difficulty: EASY
     spawning:
       ==: MVSpawnSettings
