--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -5942,6 +5942,8 @@ groups:
       prefix: Mortal
       suffix: '&f'
     permissions:
+    - -esssentials.warps.torture
+    - -esssentials.warps.tortureadmin
     - -essentials.warps.tekindustrieslaboratorygroundfloor
     - multiverse.access.infinitycity
     - ch.alias.listworlds
@@ -10245,9 +10247,10 @@ users:
       name: spartawill2004
   2bc4c9a6-d2ff-40a6-89e3-b7a165af6f97:
     group:
-    - shazam
+    - darkseid
     options:
       name: GOLDENBOY601
+    permissions: []
   2c1eb6f0-472d-416a-8d93-1e94c3dc74b6:
     group:
     - kidflash
@@ -10421,7 +10424,7 @@ users:
       name: lion002
   4087bc7f-c213-47df-bf2d-41650030be45:
     group:
-    - mortal
+    - quarantine
     options:
       name: adambash
     worlds:
@@ -10495,9 +10498,9 @@ users:
       name: BluuMelon
   474707f7-f8b4-43ea-8978-9cae17917e82:
     group:
-    - goku
+    - beerus
     options:
-      name: MilesMorales888
+      name: ThatCraftLife
     permissions: []
   475f54cd-419f-45f8-8f23-6bc2ac323dd7:
     options:
@@ -10735,7 +10738,7 @@ users:
       name: SaberBattles
   60b8ea61-b653-4cc5-8c7f-06db0ec25507:
     group:
-    - flashbarryallen
+    - mortal
     options:
       name: SanctumGaming
     worlds:
@@ -10921,7 +10924,7 @@ users:
       name: stock458
   713cae7a-ef6d-4a06-8922-4741459c12bc:
     group:
-    - godspeed
+    - infinitysilversurfer
     options:
       name: Zargon_King
     permissions:
@@ -11130,12 +11133,13 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - thefourthdoctor
+    - zion
     options:
       name: God_Doesnt_Exist
       prefix: ''
       suffix: ''
     permissions:
+    - escaperoom.bpass
     - -powers.wallrun
     - -powers.wallclimb
     - -powers.pointandclicklightning
@@ -12029,7 +12033,7 @@ users:
       name: FlameZelus
   e17d8de4-9fa8-474a-a6c1-54d28c9a5591:
     group:
-    - flashbarryallen
+    - bluelanternbarryallen
     options:
       name: nevsfam
   e1e34998-0cba-4fb1-9bdf-f2969fbd9b39:
@@ -12565,7 +12569,7 @@ users:
       name: Alittlebitrandom
   64572c10-48af-4f46-a706-aef5a6248140:
     group:
-    - steel
+    - inertiathaddeusthawneii
     options:
       name: Legobuilder122
   336f1d11-3eb7-4fe0-ab0c-87c0bc2ad87d:
@@ -12724,7 +12728,7 @@ users:
       name: Soggy_Wafer
   c8b88131-52d4-4af0-9593-ddcdb3d56058:
     group:
-    - redlanternsupergirl
+    - wonderwomangodmode
     options:
       name: _WonderBat_
     worlds:
@@ -13344,7 +13348,7 @@ users:
       name: GmenII2861
   a8f8ce5f-64ee-469d-9b3f-7d7069898694:
     group:
-    - blackbolt
+    - superman
     options:
       name: CorruptRacer
   8804c5af-7861-4d3b-ae26-750b4cf93f25:
@@ -13435,7 +13439,7 @@ users:
       name: alonzealonso
   b09b6618-e035-4e1f-be4e-f01ec6888001:
     group:
-    - parallaxentity
+    - hybrid
     options:
       name: Bcrulez
     permissions: []
@@ -13854,7 +13858,7 @@ users:
       name: SimulatedCape
   42759fe9-4f32-43b9-bdbf-8f9dc8de8bc6:
     group:
-    - greenlanternhaljordan
+    - mortal
     options:
       name: Zoomplays
     permissions: []
@@ -13890,7 +13894,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - flashwallywest
+    - deathstroke
     options:
       name: nightghost2
     permissions:
@@ -13917,9 +13921,10 @@ users:
       name: silentdeath098
   7a3d7316-9fb3-42e6-bb67-474383ba3df0:
     group:
-    - silversurfer
+    - vision
     options:
       name: birdie911
+    permissions: []
   0f59da3e-6b3b-4d01-a23e-c4a08eb22841:
     group:
     - novasamalexander
@@ -14347,7 +14352,7 @@ users:
       name: The_Legend_Zz
   25096e3b-3798-41e6-b1a6-1f257ebe6471:
     group:
-    - hercules
+    - ares
     options:
       name: Darkkoward
   funcaptainrex:
@@ -14621,7 +14626,7 @@ users:
       name: AbdullahM40
   66aafff6-ce9f-483d-bb9e-6e09509a8f8f:
     group:
-    - greenlanternhaljordan
+    - ironmanmkxliii
     options:
       name: Oreoy
     permissions: []
@@ -15675,7 +15680,7 @@ users:
     options:
       name: AlexDie10
     group:
-    - mortal
+    - deadpool
   6310a97c-4eec-422b-b00e-535996e3589b:
     group:
     - mortal
@@ -15710,7 +15715,7 @@ users:
       name: AnotherWon
   c6cb4b81-f1e7-446d-b966-e4ed7b45909d:
     group:
-    - blacklanternmartianmanhunter
+    - onepunchman
     options:
       name: LordOfGallifrey
     permissions: []
@@ -15933,7 +15938,7 @@ users:
       name: MuffinSage
   f8fb1e3a-4672-4620-9988-e99ca40c5e98:
     group:
-    - flashbartallen
+    - infinitysilversurfer
     options:
       name: WizardPros
   a15c6cfa-4abf-4fe5-bb65-594205562ad2:
@@ -15991,6 +15996,20 @@ users:
     - superman
     options:
       name: CaptainColdCW
+  265566f8-a39e-4357-8256-bed3660845ad:
+    group:
+    - agentvenom
+    options:
+      name: DaCybe
+    permissions: []
+  a3fc21a4-5704-4ea7-9024-98e542bad55c:
+    group:
+    - poisonivy
+    options:
+      name: Murpling
+  39466464-7944-4abf-84d5-1572b49f7e1a:
+    group:
+    - wonderwoman
 worlds:
   checkers:
     inheritance:
