--- a/WorldGuard/worlds/escaperoom/regions.yml
+++ b/WorldGuard/worlds/escaperoom/regions.yml
@@ -141,6 +141,14 @@ regions:
         owners: {}
         type: cuboid
         priority: 1
+    room17:
+        min: {x: 127.0, y: 105.0, z: 23.0}
+        max: {x: 145.0, y: 110.0, z: 33.0}
+        members: {}
+        flags: {greeting: 'Escape Room #17'}
+        owners: {}
+        type: cuboid
+        priority: 1
     room7-piston:
         parent: room7
         min: {x: -55.0, y: 86.0, z: 20.0}
@@ -533,15 +541,19 @@ regions:
         members: {}
         flags:
             time-lock: '4000'
-            build: deny
-            game-mode: SURVIVAL
             invincible: allow
-            blocked-cmds: [/thru]
-            passthrough: allow
             snow-fall: deny
-            block-break: deny
             interact: allow
-            block-place: deny
+            pistons: allow
+            block-place: allow
+            pistons-group: MEMBERS
+            build: deny
+            blocked-cmds: [/thru]
+            game-mode: SURVIVAL
+            block-break: allow
+            passthrough: allow
+            block-place-group: MEMBERS
+            block-break-group: MEMBERS
         owners: {}
         type: global
         priority: 0
