--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -9712,7 +9712,7 @@ groups:
     - commonherotraits
     options:
       suffix: '&c&l&o'
-      prefix: '&4&l&mO&8me&4&lg&8a'
+      prefix: '&3&l&mO&7&lme&3&lg&7&la'
     permissions:
     - essentials.*
     - essentials.warps.*
@@ -10933,7 +10933,7 @@ users:
       name: stock458
   713cae7a-ef6d-4a06-8922-4741459c12bc:
     group:
-    - infinitysilversurfer
+    - blacklanternmartianmanhunter
     options:
       name: Zargon_King
     permissions:
@@ -12578,7 +12578,7 @@ users:
       name: Alittlebitrandom
   64572c10-48af-4f46-a706-aef5a6248140:
     group:
-    - inertiathaddeusthawneii
+    - brainiac
     options:
       name: Legobuilder122
   336f1d11-3eb7-4fe0-ab0c-87c0bc2ad87d:
@@ -13903,7 +13903,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - deathstroke
+    - flashwallywest
     options:
       name: nightghost2
     permissions:
@@ -15740,7 +15740,7 @@ users:
       name: NoFearKing
   d39ddc52-5fdb-484e-8e0c-f538e7982bee:
     group:
-    - mosquitogirl
+    - hawkgirl
     options:
       name: Eyemakid
   b23253de-b89d-4ea4-8f9d-f8eaee9e2c37:
@@ -15822,7 +15822,7 @@ users:
       name: Ginger_Guy_GameZ
   936c75c3-c857-4d66-9d4c-a8644cbca3fc:
     group:
-    - kidflashwallywest
+    - thanos
     options:
       name: BlueishPanda
   e9944757-d829-4c55-9922-60026d3ae03b:
@@ -15887,7 +15887,7 @@ users:
       name: Awesomethe3rd__
   490cd7e2-5989-4bf9-92ae-25c82c817ee5:
     group:
-    - deadshot
+    - apocalypse
     options:
       name: JohnTheMaier
   05733437-539e-4560-b038-825b457b585d:
@@ -16019,6 +16019,8 @@ users:
   39466464-7944-4abf-84d5-1572b49f7e1a:
     group:
     - wonderwoman
+    options:
+      name: babybird911
 worlds:
   checkers:
     inheritance:
