--- a/WorldGuard/worlds/underworld/config.yml
+++ b/WorldGuard/worlds/underworld/config.yml
@@ -9,4 +9,7 @@
 # Remove the {} and add your own entries.
 #
 
-{}
+ignition:
+    block-tnt: false
+    block-tnt-block-damage: false
+    block-lighter: false
