--- a/WorldGuard/worlds/underworld/regions.yml
+++ b/WorldGuard/worlds/underworld/regions.yml
@@ -10,164 +10,9 @@
 # REMEMBER TO KEEP PERIODICAL BACKUPS.
 #
 regions:
-    employeeroom:
-        min: {x: 1.0, y: 1.0, z: 92.0}
-        max: {x: 14.0, y: 7.0, z: 100.0}
-        members:
-            unique-ids: [323c42e2-abb0-4a25-a818-1cb14f8a53f8, 8a4aa588-fb1b-47a7-a1cf-7f866dcc4bf8,
-                0130299a-4489-429d-b4eb-68643a4c6ac8, a8185de3-b053-4aca-9eb6-d98728e476ad]
-        flags: {entry: deny, build: deny, interact: deny, interact-group: NON_MEMBERS}
-        owners: {}
-        type: cuboid
-        priority: 1
-    room4-buttons:
-        parent: room4
-        min: {x: -27.0, y: 21.0, z: -30.0}
-        max: {x: -25.0, y: 21.0, z: -29.0}
-        members: {}
-        flags: {}
-        owners: {}
-        type: cuboid
-        priority: 0
-    rooms:
-        members: {}
-        flags: {build: allow, game-mode: CREATIVE, build-group: MEMBERS, interact: deny,
-            interact-group: NON_MEMBERS, game-mode-group: MEMBERS}
-        owners: {}
-        type: global
-        priority: 1
-    room3:
-        parent: rooms
-        min: {x: -51.0, y: 20.0, z: -40.0}
-        max: {x: -43.0, y: 22.0, z: -28.0}
-        members: {}
-        flags: {}
-        owners: {}
-        type: cuboid
-        priority: 2
-    room4:
-        parent: rooms
-        min: {x: -37.0, y: 20.0, z: -40.0}
-        max: {x: -29.0, y: 22.0, z: -28.0}
-        members:
-            unique-ids: [323c42e2-abb0-4a25-a818-1cb14f8a53f8]
-        flags: {}
-        owners: {}
-        type: cuboid
-        priority: 2
-    room3-buttons:
-        parent: room3
-        min: {x: -47.0, y: 21.0, z: -42.0}
-        max: {x: -47.0, y: 22.0, z: -41.0}
-        members: {}
-        flags: {}
-        owners: {}
-        type: cuboid
-        priority: 0
-    underworld-throne:
-        min: {x: -11.0, y: 13.0, z: 26.0}
-        max: {x: 13.0, y: 38.0, z: 41.0}
-        members:
-            unique-ids: [cb871f86-94e5-4bf3-a78e-42f73c2215c4]
-        flags: {other-explosion: deny, build: deny, build-group: NON_MEMBERS, block-break: deny,
-            interact: deny, interact-group: NON_MEMBERS, tnt: deny, block-place: deny}
-        owners: {}
-        type: cuboid
-        priority: 1
-    mainoffice:
-        min: {x: -57.0, y: 15.0, z: -10.0}
-        max: {x: -55.0, y: 15.0, z: -4.0}
-        members: {}
-        flags: {interact: deny, interact-group: NON_MEMBERS}
-        owners: {}
-        type: cuboid
-        priority: 2
-    mainoffice-door:
-        min: {x: -37.0, y: 13.0, z: 0.0}
-        max: {x: -37.0, y: 13.0, z: 0.0}
-        members: {}
-        flags: {interact: deny, interact-group: NON_MEMBERS}
-        owners: {}
-        type: cuboid
-        priority: 1
-    room2-buttons:
-        parent: room2
-        min: {x: -47.0, y: 21.0, z: 27.0}
-        max: {x: -47.0, y: 22.0, z: 28.0}
-        members: {}
-        flags: {}
-        owners: {}
-        type: cuboid
-        priority: 0
-    pistons:
-        min: {x: -38.0, y: 12.0, z: -10.0}
-        max: {x: -38.0, y: 14.0, z: -2.0}
-        members: {}
-        flags: {pistons-group: MEMBERS, block-break: allow, block-place-group: MEMBERS,
-            pistons: allow, block-place: allow, block-break-group: MEMBERS}
-        owners: {}
-        type: cuboid
-        priority: 1
-    room1:
-        parent: rooms
-        min: {x: -37.0, y: 20.0, z: 14.0}
-        max: {x: -29.0, y: 22.0, z: 26.0}
-        members:
-            unique-ids: [869b4227-b51e-452e-adbd-48759a6848dd]
-        flags: {}
-        owners: {}
-        type: cuboid
-        priority: 2
-    room2:
-        parent: rooms
-        min: {x: -51.0, y: 20.0, z: 14.0}
-        max: {x: -43.0, y: 22.0, z: 26.0}
-        members: {}
-        flags: {}
-        owners: {}
-        type: cuboid
-        priority: 2
-    room1-buttons:
-        parent: room1
-        min: {x: -27.0, y: 21.0, z: 15.0}
-        max: {x: -25.0, y: 21.0, z: 16.0}
-        members: {}
-        flags: {}
-        owners: {}
-        type: cuboid
-        priority: 0
-    paintings:
-        min: {x: -56.0, y: 16.0, z: -16.0}
-        max: {x: -54.0, y: 21.0, z: 1.0}
-        members: {}
-        flags: {build: deny, interact: deny, entity-item-frame-destroy: deny}
-        owners: {}
-        type: cuboid
-        priority: 2
-    banned:
-        min: {x: -60.0, y: 0.0, z: -101.0}
-        max: {x: 77.0, y: 203.0, z: 57.0}
-        members: {}
-        flags: {entry: deny, entry-deny-message-group: MEMBERS, entry-deny-message: You have been Banished from Entering the Dark Lords Castle. Be Gone Mortal!,
-            entry-group: MEMBERS}
-        owners: {}
-        type: cuboid
-        priority: 0
     __global__:
-        members:
-            unique-ids: [0130299a-4489-429d-b4eb-68643a4c6ac8, 8a4aa588-fb1b-47a7-a1cf-7f866dcc4bf8]
-        flags:
-            item-drop: allow
-            invincible: allow
-            allowed-cmds-group: MEMBERS
-            mob-damage: deny
-            mob-damage-group: MEMBERS
-            interact: allow
-            invincible-group: MEMBERS
-            pvp: allow
-            item-drop-group: MEMBERS
-            allowed-cmds: [/tpa, /fly, /sethome, /teleport, /gmc, /tphere, /home,
-                /warp, /run, /tp, /tptoggle]
+        members: {}
+        flags: {other-explosion: allow, block-break: allow, tnt: allow}
         owners: {}
         type: global
         priority: 0
