--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -5951,6 +5951,7 @@ groups:
       prefix: Mortal
       suffix: '&f'
     permissions:
+    - multiverse.access.underworld
     - -esssentials.warps.torture
     - -esssentials.warps.tortureadmin
     - -essentials.warps.tekindustrieslaboratorygroundfloor
@@ -14880,7 +14881,7 @@ users:
       name: Glint73
   844c481c-dd94-4524-83a3-3bbcc296bee5:
     group:
-    - deathstroke
+    - blacklanternmartianmanhunter
     options:
       name: Jeff_Kang
     permissions: []
