--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -13485,7 +13485,7 @@ users:
       name: elementia3773
   869b4227-b51e-452e-adbd-48759a6848dd:
     group:
-    - sentry
+    - blackracerwilliewalker
     options:
       name: Eobard765Man
     permissions: []
