Doctor stuff (more than 4th)
I've added permissions for the fourth Doctor. I'll provide evidence for these powers next time we meet. I have also begun creating other incarnations of the Doctor

--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,10 +1,52 @@
 groups:
   thefourthdoctor:
-    options:
-      prefix: '&6The &7D&co&ec&7t&7&5o&6r&8(&f4th&8)'
-      suffix: '&c'
     inheritance:
     - commonherotraits
+    options:
+      prefix: '§6The §7D§co§ec§7t§7§5o§6r§8(§f4th§8)'
+      suffix: '&1'
+    worlds:
+      survival:
+        permissions:
+        - essentials.msg
+        - essentials.warps.*
+        - ch.alias.mindlock
+        - ch.alias.stopmindcontrol
+        - ch.alias.speak
+        - ch.alias.confuse
+        - ch.alias.unconfuse
+        - ch.alias.mindcontrol
+        - ch.alias.jump0
+        - ch.alias.jump1
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.haste0
+        - ch.alias.haste1
+  thefirstdoctor:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '§6The §7D§co§ec§7t§7§5o§6r§8(§f4th§8)'
+      suffix: '&1'
+    worlds:
+      survival:
+        permissions:
+        - essentials.msg
+        - essentials.warps.*
+        - ch.alias.mindlock
+        - ch.alias.stopmindcontrol
+        - ch.alias.speak
+        - ch.alias.confuse
+        - ch.alias.unconfuse
+        - ch.alias.mindcontrol
+        - ch.alias.jump0
+        - ch.alias.jump1
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.haste0
+        - ch.alias.haste1
   redranger:
     inheritance:
     - commonherotraits
