--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -33,6 +33,7 @@ groups:
         - ch.alias.haste5
         - ch.alias.zord
         - ch.alias.unzord
+        - worldedit.navigation.thru.command
   mosquitogirl:
     inheritance:
     - commonherotraits
