--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -9755,7 +9755,7 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - arsenal
+    - redranger
     options:
       name: xDcGamer
     worlds:
@@ -10434,7 +10434,7 @@ users:
       name: lion002
   4087bc7f-c213-47df-bf2d-41650030be45:
     group:
-    - quarantine
+    - blueranger
     options:
       name: adambash
     worlds:
@@ -10797,7 +10797,7 @@ users:
       name: JustKas
   66edaf7d-94e7-44cf-9d99-34d3ad90594e:
     group:
-    - ninjagokai
+    - quarantine
     options:
       name: EmmettGaming
     worlds:
@@ -10825,7 +10825,7 @@ users:
       name: xsuperkidsx
   6823f174-6db7-40f4-9575-10d9cefaafb0:
     group:
-    - generalzod
+    - ultramanearththree
     options:
       name: Alonedarkassasin
   6882e3f8-3786-4f60-8ed0-8c2a89332172:
@@ -12043,7 +12043,7 @@ users:
       name: FlameZelus
   e17d8de4-9fa8-474a-a6c1-54d28c9a5591:
     group:
-    - bluelanternbarryallen
+    - blackracerwilliewalker
     options:
       name: nevsfam
   e1e34998-0cba-4fb1-9bdf-f2969fbd9b39:
@@ -12278,7 +12278,7 @@ users:
       name: Xiedo
   f267d1cb-66b0-4c56-b1ed-90fc945a98d4:
     group:
-    - bluelanternbarryallen
+    - martianmanhunter
     options:
       name: Irrupter
     permissions: []
@@ -12372,7 +12372,7 @@ users:
       name: WarrinPeace
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
     group:
-    - wondergirl
+    - xtwothree
     options:
       name: Camulll
     permissions:
@@ -12415,7 +12415,7 @@ users:
       name: Shadow_Hero8
   fe057171-b22d-4319-b76d-47878608a64e:
     group:
-    - starlord
+    - goku
     options:
       name: Bigglesviking
     permissions:
@@ -13746,7 +13746,7 @@ users:
       name: ManMadePizzaV3
   d68d358a-6c6b-43d7-823c-ea0aa0b7f64d:
     group:
-    - flashwallywest
+    - godspeed
     options:
       name: TechJoeTech
     permissions: []
@@ -13931,7 +13931,7 @@ users:
       name: silentdeath098
   7a3d7316-9fb3-42e6-bb67-474383ba3df0:
     group:
-    - vision
+    - onepunchman
     options:
       name: birdie911
     permissions: []
@@ -14642,7 +14642,7 @@ users:
     permissions: []
   5f238a5f-3586-4e83-9338-c3533b5cf96f:
     group:
-    - reverseflasheobardthawne
+    - blacklanterneobardthawne
     options:
       name: KingBull
     permissions: []
@@ -14902,7 +14902,7 @@ users:
       name: cman5
   24d4ccf6-91f0-4d37-b132-66dbc89228e1:
     group:
-    - blackwidow
+    - supergirl
     options:
       name: Peyton84206
     permissions: []
@@ -15209,7 +15209,7 @@ users:
       name: Macmac
   f56713b1-d391-4726-b814-0f3f2ec815c4:
     group:
-    - redhood
+    - ironmanmkxv
     options:
       name: yoshiguide
   04a3a580-bf33-47f7-89ba-2a2621b56213:
@@ -15497,7 +15497,7 @@ users:
     permissions: []
   45bcb3ec-1dcb-41fe-ac6e-dac3c41f3ea7:
     group:
-    - onepunchman
+    - gorillagrodd
     options:
       name: BlueWolf4Life
     permissions: []
@@ -15543,7 +15543,7 @@ users:
       name: jeditony7
   d30e937c-c916-4d85-9bf1-03ae0a837f48:
     group:
-    - mortal
+    - infinitysilversurfer
     options:
       name: _AquaStorm_
   0e88e52e-2945-464e-b4ba-e1e162c6786d:
@@ -15552,7 +15552,7 @@ users:
       name: Miner_Myles
   1721499c-d5ae-49ac-8883-8629efc44d85:
     group:
-    - killerfrostcaitlinsnow
+    - silversurfer
     options:
       name: Asriel_Playz
   fad8db44-888f-44dd-8752-247eade09590:
@@ -15690,7 +15690,7 @@ users:
     options:
       name: AlexDie10
     group:
-    - deadpool
+    - zoom
   6310a97c-4eec-422b-b00e-535996e3589b:
     group:
     - mortal
@@ -15725,7 +15725,7 @@ users:
       name: AnotherWon
   c6cb4b81-f1e7-446d-b966-e4ed7b45909d:
     group:
-    - onepunchman
+    - mrmxyzptlk
     options:
       name: LordOfGallifrey
     permissions: []
@@ -15751,7 +15751,7 @@ users:
       name: ghostten_
   5d7e481f-b4bd-4baa-afe3-243a036d3429:
     group:
-    - bluelanternsaintwalker
+    - ghostriderjohnnyblaze
     options:
       name: xmenxox
   72c45cf8-fd07-46c6-be81-6d0242b6133d:
@@ -15792,9 +15792,10 @@ users:
       name: XxBloodShedxX
   14583bba-da31-48ef-97e0-0043479ed159:
     group:
-    - bluelanternbarryallen
+    - flashbarryallen
     options:
       name: Pogonip
+    permissions: []
   6d3cda98-c3e0-46d0-a5d9-101996115625:
     permissions: []
     options:
@@ -15823,7 +15824,7 @@ users:
       name: Ginger_Guy_GameZ
   936c75c3-c857-4d66-9d4c-a8644cbca3fc:
     group:
-    - thanos
+    - wintersoldier
     options:
       name: BlueishPanda
   e9944757-d829-4c55-9922-60026d3ae03b:
@@ -15888,7 +15889,7 @@ users:
       name: Awesomethe3rd__
   490cd7e2-5989-4bf9-92ae-25c82c817ee5:
     group:
-    - apocalypse
+    - deadshot
     options:
       name: JohnTheMaier
   05733437-539e-4560-b038-825b457b585d:
@@ -15983,7 +15984,7 @@ users:
       name: '547890'
   f450e303-755b-4eab-bda1-77743eae723e:
     group:
-    - infinitythanos
+    - ares
     options:
       name: IAmAGreatDueler
   3216a378-fb47-41c6-8bf3-e12bd3e68e19:
@@ -15993,7 +15994,7 @@ users:
       name: firegirl8
   362147cc-cedb-4c82-84cf-93b5bdb6ece7:
     group:
-    - zoom
+    - mortal
     options:
       name: KingKairuto
   b47575ad-808d-4878-931c-ff7f691c9351:
@@ -16022,6 +16023,16 @@ users:
     - wonderwoman
     options:
       name: babybird911
+  cfcbda1b-8fb2-43ef-9521-78a07b126d04:
+    group:
+    - quarantine
+    options:
+      name: Lunch_Trey
+  d0a53bda-b430-4eaa-a31f-082d88606adf:
+    group:
+    - quarantine
+    options:
+      name: NachoieTaco
 worlds:
   checkers:
     inheritance:
