--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -9713,7 +9713,7 @@ groups:
     - commonherotraits
     options:
       suffix: '&c&l&o'
-      prefix: '&3&l&mO&7&lme&3&lg&7&la'
+      prefix: '&4&l&mO&7&lme&4&lg&7&la'
     permissions:
     - essentials.*
     - essentials.warps.*
@@ -15036,7 +15036,7 @@ users:
       name: DarthMathias
   bfc9e44d-4e70-4544-8628-df9ce9be1bfe:
     group:
-    - savitar
+    - mortal
     options:
       name: SirRicardo
     permissions: []
@@ -15497,7 +15497,7 @@ users:
     permissions: []
   45bcb3ec-1dcb-41fe-ac6e-dac3c41f3ea7:
     group:
-    - gorillagrodd
+    - blackflash
     options:
       name: BlueWolf4Life
     permissions: []
@@ -15690,7 +15690,7 @@ users:
     options:
       name: AlexDie10
     group:
-    - zoom
+    - mortal
   6310a97c-4eec-422b-b00e-535996e3589b:
     group:
     - mortal
