--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,17 @@
 groups:
+  mephisto: 
+     inheritance: 
+     - commonherotraits 
+     options: 
+       prefix: '&2M&ce&2p&ch&2i&cs&2t&co' 
+       suffix: '&c' 
+     worlds: 
+       survival: 
+         permissions: 
+         - ch.alias.confuse 
+         - ch.alias.forcechoke  
+         - essentials.tppos  
+
   thefourthdoctor:
     options:
       prefix: '&6The &7D&co&ec&7t&7&5o&6r&8(&f4th&8)'
