--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -14,6 +14,7 @@ groups:
     worlds:
       survival:
         permissions:
+        - worldedit.navigation.thru.command
         - -essentials.protect.damage.fall
         - ch.alias.carryplayer
         - ch.alias.dismountplayer
@@ -33,7 +34,6 @@ groups:
         - ch.alias.haste5
         - ch.alias.zord
         - ch.alias.unzord
-        - worldedit.navigation.thru.command
   mosquitogirl:
     inheritance:
     - commonherotraits
@@ -10220,7 +10220,7 @@ users:
       name: Omegaglade23
   28556dea-667d-409f-b2ff-fb4177a20ff2:
     group:
-    - mortal
+    - missmartian
     options:
       name: Br0kenS0uls
     worlds:
@@ -10798,7 +10798,7 @@ users:
       name: JustKas
   66edaf7d-94e7-44cf-9d99-34d3ad90594e:
     group:
-    - quarantine
+    - blacklanternmartianmanhunter
     options:
       name: EmmettGaming
     worlds:
@@ -10826,7 +10826,7 @@ users:
       name: xsuperkidsx
   6823f174-6db7-40f4-9575-10d9cefaafb0:
     group:
-    - ultramanearththree
+    - quarantine
     options:
       name: Alonedarkassasin
   6882e3f8-3786-4f60-8ed0-8c2a89332172:
@@ -11975,7 +11975,7 @@ users:
     group:
     - harleyquinn
     options:
-      name: D_Terra_C
+      name: SS_HarleyQuinn
       prefix: ''
     permissions:
     - -herochat.color.*
@@ -13486,7 +13486,7 @@ users:
       name: elementia3773
   869b4227-b51e-452e-adbd-48759a6848dd:
     group:
-    - blackracerwilliewalker
+    - mortal
     options:
       name: Eobard765Man
     permissions: []
@@ -14797,7 +14797,7 @@ users:
       name: xC1ndy
   52042d75-faf5-43ef-980c-e28b650b5dfe:
     group:
-    - flashbarryallen
+    - shazam
     options:
       name: AlfieMc007
     permissions: []
@@ -14857,7 +14857,7 @@ users:
       name: firedragon200YT
   748c7d68-79e5-4194-9bc8-e446d948ee8a:
     group:
-    - flashbarryallen
+    - superman
     options:
       name: alex363
     permissions: []
@@ -15037,7 +15037,7 @@ users:
       name: DarthMathias
   bfc9e44d-4e70-4544-8628-df9ce9be1bfe:
     group:
-    - mortal
+    - savitar
     options:
       name: SirRicardo
     permissions: []
@@ -15210,9 +15210,10 @@ users:
       name: Macmac
   f56713b1-d391-4726-b814-0f3f2ec815c4:
     group:
-    - ironmanmkxv
+    - greenlanternhaljordan
     options:
       name: yoshiguide
+    permissions: []
   04a3a580-bf33-47f7-89ba-2a2621b56213:
     group:
     - carnage
@@ -15691,7 +15692,7 @@ users:
     options:
       name: AlexDie10
     group:
-    - mortal
+    - zoom
   6310a97c-4eec-422b-b00e-535996e3589b:
     group:
     - mortal
@@ -16034,6 +16035,14 @@ users:
     - quarantine
     options:
       name: NachoieTaco
+  c4eb2357-84c3-416a-87c8-ea172cb73655:
+    group:
+    - carnage
+    options:
+      name: TheCybe
+  40b1b828-fe30-41a1-ac6a-08d45080fd7e:
+    group:
+    - spidermanmilesmorales
 worlds:
   checkers:
     inheritance:
