--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -11,7 +11,7 @@ groups:
          - ch.alias.confuse 
          - ch.alias.forcechoke  
          - essentials.tppos  
-
+         - ch.alias.unconfuse
   thefourthdoctor:
     options:
       prefix: '&6The &7D&co&ec&7t&7&5o&6r&8(&f4th&8)'
