--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -15477,7 +15477,7 @@ users:
       name: TNT123456
   93a56570-0d6c-4e4b-997c-8a9232242347:
     group:
-    - blacklanternmartianmanhunter
+    - mortal
     permissions:
     - -sank.sounds
     options:
@@ -15926,7 +15926,7 @@ users:
       name: SepticPanda45
   87bb4f34-8ea7-4e22-a9a6-8c157cf33b1e:
     group:
-    - savitar
+    - mortal
     options:
       name: MrGold4
   65f708f6-deb9-4fd3-99f7-c235dd2ce33a:
