--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,17 +1,17 @@
 groups:
-  mephisto: 
-     inheritance: 
-     - commonherotraits 
-     options: 
-       prefix: '&2M&ce&2p&ch&2i&cs&2t&co' 
-       suffix: '&c' 
-     worlds: 
-       survival: 
-         permissions: 
-         - ch.alias.confuse 
-         - ch.alias.forcechoke  
-         - essentials.tppos  
-         - ch.alias.unconfuse
+  mephisto:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&2M&ce&2p&ch&2i&cs&2t&co'
+      suffix: '&c'
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.confuse
+        - ch.alias.forcechoke
+        - essentials.tppos
+        - ch.alias.unconfuse
   thefourthdoctor:
     options:
       prefix: '&6The &7D&co&ec&7t&7&5o&6r&8(&f4th&8)'
@@ -14650,7 +14650,7 @@ users:
       name: AbdullahM40
   66aafff6-ce9f-483d-bb9e-6e09509a8f8f:
     group:
-    - ironmanmkxliii
+    - infinitythanos
     options:
       name: Oreoy
     permissions: []
@@ -15312,7 +15312,7 @@ users:
       name: DerpyPlayzYT
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - dormammu
+    - mephisto
     options:
       name: mythguy1226
   98163bdb-968d-4a0e-96fd-10714ae78950:
@@ -15512,7 +15512,7 @@ users:
     permissions: []
   45bcb3ec-1dcb-41fe-ac6e-dac3c41f3ea7:
     group:
-    - blackflash
+    - onepunchman
     options:
       name: BlueWolf4Life
     permissions: []
@@ -15705,7 +15705,7 @@ users:
     options:
       name: AlexDie10
     group:
-    - zoom
+    - flashbarryallen
   6310a97c-4eec-422b-b00e-535996e3589b:
     group:
     - mortal
