--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -8,16 +8,7 @@ groups:
      worlds: 
        survival: 
          permissions: 
-         - ch.alias.run0 
-         - ch.alias.run1
-         - ch.alias.run2
-         - ch.alias.run3
-         - ch.alias.run4
-         - ch.alias.run5
-         - ch.alias.run6
-         - ch.alias.run7
-         - ch.alias.run8
-         - ch.alias.run9
+         - ch.alias.stoptime
   mephisto: 
      inheritance: 
      - commonherotraits 
