--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,20 @@
 groups:
+  loki: 
+     inheritance: 
+     - commonherotraits 
+     options: 
+       prefix: '&6L&2o&8k&bi' 
+       suffix: '&b' 
+     worlds: 
+       survival: 
+         permissions: 
+         - ch.alias.mindcontrol 
+         - ch.alias.stopmindcontrol 
+         - essentials.tppos 
+         - ch.alias.disguise
+         - ch.alias.run0
+         - ch.alias.run1
+         - ch.alias.run2
   mephisto:
     inheritance:
     - commonherotraits
